--- a/P008185.opf/meta.yml
+++ b/P008185.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W1KG1097
   title: ཀརྨ་རཏྣའི་སྨན་ཡིག་གཅེས་བཏུས།
   author: ''
-  volumes: {}
+  volumes:
+    765c8dff5e2641b9894c49682127672f:
+      image_group_id: I1KG1117
+      title: ''
+      volume_number: 1
+      total_pages: 436
