--- a/P008185.opf/layers/v001/Pagination.yml
+++ b/P008185.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 5035e87618104d72a64457814492caef
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   c6f67fc1488e4c13beeb3343720e8b6c:
