--- a/P008185.opf/meta.yml
+++ b/P008185.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P008185
 initial_creation_type: ocr
+created_at: 28/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W1KG1097
   title: ཀརྨ་རཏྣའི་སྨན་ཡིག་གཅེས་བཏུས།
